--- a/templates/index.html
+++ b/templates/index.html
@@ -86,6 +86,18 @@
                         Stop
                     </button>
                 </div>
+                
+                <!-- Progress Bar -->
+                <div class="progress-container" id="progressContainer" style="display: none;">
+                    <div class="progress-header">
+                        <span class="progress-label" id="progressLabel">Scanning...</span>
+                        <span class="progress-stats" id="progressStats">0 / 0</span>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress-fill" id="progressFill" style="width: 0%"></div>
+                    </div>
+                    <div class="progress-detail" id="progressDetail"></div>
+                </div>
             </section>
 
             <section class="output-panel">
