Add missing tooltips to conversion options
- Add tooltip for 'Include Simple FEL' option
- Add tooltip for 'Auto Cleanup Backups' option
- Add tooltip for 'Auto-convert Profile 7 files' option

--- a/templates/index.html
+++ b/templates/index.html
@@ -321,6 +321,7 @@
                             <div class="setting-item checkbox">
                                 <input type="checkbox" id="autoConvert">
                                 <label for="autoConvert">Auto-convert Profile 7 files</label>
+                                <span class="tooltip" title="Automatically convert newly found Profile 7 files during scheduled scans">?</span>
                             </div>
                         </div>
                     </div>
@@ -343,11 +344,13 @@
                         <div class="setting-item checkbox">
                             <input type="checkbox" id="includeSimple">
                             <label for="includeSimple">Include Simple FEL</label>
+                            <span class="tooltip" title="Include simple FEL (Full Enhancement Layer) profile 7 files in conversion">?</span>
                         </div>
                         
                         <div class="setting-item checkbox">
                             <input type="checkbox" id="autoCleanup">
                             <label for="autoCleanup">Auto Cleanup Backups</label>
+                            <span class="tooltip" title="Automatically delete backup files after successful conversion">?</span>
                         </div>
                     </div>
                     
